Flash: On activity, prevent display sleep, not just system sleep

BUG=658910

Review-Url: https://codereview.chromium.org/2462243004
Cr-Commit-Position: refs/heads/master@{#429370}

Former-commit-id: 0ef11abdb743e2af6aaba409e9d123cfeb73b921